After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 674339 - Wrong pad request template used for tee
Wrong pad request template used for tee
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-editing-services
git master
Other All
: Normal normal
: 0.10.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-04-18 14:56 UTC by LRN
Modified: 2012-05-01 18:08 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix src pad request template for tee (1.45 KB, patch)
2012-04-18 14:57 UTC, LRN
committed Details | Review

Description LRN 2012-04-18 14:56:30 UTC
The following line:
tmppad = gst_element_get_request_pad (chain->tee, "src%d");
results in tmppad == NULL
The reason for that is that "src%d" template is wrong, it should be "src_%u" for tee element.
Comment 1 LRN 2012-04-18 14:57:04 UTC
Created attachment 212303 [details] [review]
Fix src pad request template for tee
Comment 2 Tim-Philipp Müller 2012-05-01 18:08:33 UTC
commit f65df0ec248731b2babbf6810a617a2661c0c11a
Author: Руслан Ижбулатов <lrn1986@gmail.com>
Date:   Wed Apr 18 18:34:01 2012 +0400

    timeline-pipeline: fix src pad request template for tee
    
    https://bugzilla.gnome.org/show_bug.cgi?id=674339