timeline-pipeline: fix src pad request template for tee

https://bugzilla.gnome.org/show_bug.cgi?id=674339